--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
             <div class="header-content">
                 <a href="/" class="logo">
                     <picture>
-                        <img src="<%= require('./img/default.svg') %>" data-src="<%= require('./img/logo.svg') %>" alt="" title="">
+                        <img src="<%= require('./img/logo.svg') %>" alt="" title="">
                     </picture>
                 </a>
             </div>
@@ -38,7 +38,7 @@
                 <div class="main-content">
                     <picture class="main-content__pic">
                         <source media="(min-width: 768px)" srcset="<%= require('./img/aviator_lg.png') %>">
-                        <img src="<%= require('./img/default.svg') %>" data-src="<%= require('./img/aviator_sm.png') %>" alt="" title="">
+                        <img src="<%= require('./img/aviator_sm.png') %>" alt="" title="">
                     </picture>
 
                     <p class="main-content__text">Get <span class="text-uppercase">Exclusive Bonus</span> up to 1.3 LAKH!</p>
