--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
                 <picture>
                     <source media="(min-width: 768px)" srcset="<%= require('./img/background_lg.png') %>">
 
-                    <img src="<%= require('./img/default.svg') %>" class="section-bg__img" data-src="<%= require('./img/background_sm.png') %>" alt="" title="">
+                    <img src="<%= require('./img/background_sm.png') %>" class="section-bg__img" alt="" title="">
                 </picture>
             </div>
 
