--- a/src/index.html
+++ b/src/index.html
@@ -9,15 +9,25 @@
 <body>
 <!-- BODY -->
 <div class="main-wrapper">
+    <div class="section-bg">
+        <picture>
+            <source media="(min-width: 1024px)" srcset="<%= require('./img/background_lg.png') %>">
+
+            <img src="<%= require('./img/background_sm.png') %>" class="section-bg__img" alt="" title="">
+        </picture>
+    </div>
+
     <!-- HEADER -->
     <header class="header">
-        <div class="container">
+        <div class="container-fluid">
             <div class="header-content">
                 <a href="/" class="logo">
                     <picture>
                         <img src="<%= require('./img/logo.svg') %>" alt="" title="">
                     </picture>
                 </a>
+
+                <span class="header-content__text">FLY HIGH!</span>
             </div>
         </div>
     </header>
@@ -26,37 +36,16 @@
     <!-- CONTENT -->
     <main class="content">
         <div class="section section-main">
-            <div class="section-bg">
-                <picture>
-                    <source media="(min-width: 768px)" srcset="<%= require('./img/background_lg.png') %>">
-
-                    <img src="<%= require('./img/background_sm.png') %>" class="section-bg__img" alt="" title="">
-                </picture>
-            </div>
-
-            <div class="container">
+            <div class="container justify-content-end">
                 <div class="main-content">
-                    <picture class="main-content__pic">
-                        <source media="(min-width: 768px)" srcset="<%= require('./img/aviator_lg.png') %>">
-                        <img src="<%= require('./img/aviator_sm.png') %>" alt="" title="">
-                    </picture>
+                    <p class="main-content__text">LAND in MONEY FILLED of Paradise BONUS up to 1.3 LAKH + 5 FREEBETS</p>
 
-                    <p class="main-content__text">Get <span class="text-uppercase">Exclusive Bonus</span> up to 1.3 LAKH!</p>
-
-                    <button type="button" class="btn" data-toggle="modal" data-target="#registration">Play Now</button>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#registration">FLY NOW</button>
                 </div>
             </div>
         </div>
     </main>
     <!-- CONTENT END -->
-
-    <!-- FOOTER -->
-    <footer class="footer">
-        <div class="container">
-
-        </div>
-    </footer>
-    <!-- FOOTER END -->
 </div>
 
 <div class="modal fade" id="registration" tabindex="-1" role="dialog" aria-labelledby="registrationLabel" aria-hidden="true">
@@ -65,7 +54,7 @@
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
 
             <div class="registration">
-                <p class="registration__title">Register and<br><span class="registration__title-text">get 4x deposit bonus now!</span></p>
+                <p class="registration__title">GET up to 1.3 LAKH + 5 FREEBETS!</p>
 
                 <div id="tabs">
                     <ul>
